[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gov-accounting-standards"
version = "1.0.0"
description = "政府和非营利组织会计准则制度汇编"
readme = "README.md"
license = {text = "CC-BY-NC-SA-4.0"}
authors = [
    {name = "zhaoyh603", email = "zhaoyh603@163.com"},
]
keywords = ["government", "accounting", "standards", "non-profit", "finance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Legal Industry",
    "License :: Other/Proprietary License",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Documentation",
]
requires-python = ">=3.8"
dependencies = [
    "jieba>=0.42.1",
    "Jinja2>=3.0.3",
    "Markdown>=3.3.6",
    "MarkupSafe>=2.0.1",
    "mergedeep>=1.3.4",
    "mkdocs[i18n]>=1.2.3",
    "mkdocs-awesome-pages-plugin>=2.7.0",
    "mkdocs-material>=8.1.7",
    "mkdocs-material-extensions>=1.0.3",
    "Pygments>=2.11.2",
    "pymdown-extensions>=9.1",
    "pyparsing>=3.0.7",
    "python-dateutil>=2.8.2",
    "PyYAML>=6.0",
    "pyyaml_env_tag>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/zhaoyh603/gov-accounting-standards"
Documentation = "https://zhaoyh603.github.io/gov-accounting-standards/"
Repository = "https://github.com/zhaoyh603/gov-accounting-standards.git"
Issues = "https://github.com/zhaoyh603/gov-accounting-standards/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gov_accounting_standards"]

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/mkdocs.yml",
    "/README.md",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
